--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=service-registry-jb
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+eureka.instance.hostname=localhost
